# oxide

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/oxide_build/: Cargo.toml
crates/oxide_cli/: Cargo.toml
crates/oxide_cli/src/: args.rs  logger.rs  main.rs
crates/oxide_cli/src/instantiate/: args.rs  mod.rs
crates/oxide_core/: Cargo.toml
crates/oxide_core/src/: lib.rs  prelude.rs
crates/oxide_core/src/builtins/: fetchurl.rs  mod.rs
crates/oxide_core/src/drv/: drv.rs  lazy.rs  mod.rs  path.rs  store.rs
crates/oxide_core/src/expr/: mod.rs
crates/oxide_core/src/hash/: mod.rs
crates/oxide_core/src/store/: config.rs  globals.rs  mod.rs
crates/oxide_core/src/system/: mod.rs
crates/oxide_core/src/types/: mod.rs
crates/oxide_core/src/utils/: mod.rs
crates/oxide_daemon/: Cargo.toml
crates/oxide_instantiate/: Cargo.toml
crates/oxide_instantiate/examples/: instantiate.rs
crates/oxide_instantiate/src/: lib.rs
crates/oxide_instantiate/src/instantiate/: mod.rs
crates/oxide_internal/: Cargo.toml
crates/oxide_internal/src/: lib.rs  prelude.rs
crates/oxide_pkgs/: Cargo.toml
crates/oxide_pkgs/src/: lib.rs
crates/oxide_pkgs/src/pkgs/fetchers/: fetchurl.rs
crates/oxide_pkgs/src/pkgs/hello/: builder.sh  mod.rs
crates/oxide_pkgs/src/pkgs/perl/: mod.rs
crates/oxide_pkgs/src/pkgs/stdenv/: mod.rs
crates/oxide_pkgs/src/pkgs/top_level/: all_packages.rs
crates/oxide_store/: Cargo.toml
crates/oxide_store/src/: lib.rs
crates/oxide_store/src/api/: api.rs  mod.rs  opt.rs
crates/oxide_store/src/builtins/: fetchurl.rs  mod.rs
crates/oxide_store/src/hash/: hash.rs  mod.rs  scan.rs  utils.rs
crates/oxide_store/src/hash/hash/: mod.rs
crates/oxide_store/src/hash/hashmod/: mod.rs
crates/oxide_store/src/hash/rewrite/: mod.rs
crates/oxide_store/src/hash/scan/: mod.rs
crates/oxide_store/src/hash/utils/: chunk.rs  mod.rs
crates/oxide_store/src/instantiate/: mod.rs
crates/oxide_store/src/models/: mod.rs  path.rs
crates/oxide_store/src/os/: mod.rs  utils.rs
crates/oxide_store/src/os/lock/: mod.rs
crates/oxide_store/src/os/sandbox/: mod.rs
crates/oxide_store/src/scan/: mod.rs  scan.rs
crates/oxide_store/src/stores/local/: mod.rs  queries.rs
crates/oxide_store/src/types/: mod.rs
crates/oxide_store/src/utils/: mod.rs
crates/oxide_store/src/utils/tempfile/: mod.rs
migrations/: 20250507132207_init.down.sql  20250507132207_init.up.sql
src/: lib.rs
