[package]
name = "oxide"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["crates/*"]

[dependencies]
oxide_internal = { path = "crates/oxide_internal" }

[workspace.lints.clippy]
missing_safety_doc = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
# TODO: do not allow this lints
declare_interior_mutable_const = "allow"
borrow_interior_mutable_const = "allow"
