[package]
name = "oxide"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["crates/*"]

[dependencies]
oxide_internal = { path = "crates/oxide_internal" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_safety_doc = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
# TODO: do not allow the lints below
declare_interior_mutable_const = "allow"
borrow_interior_mutable_const = "allow"

# This is used to not make rust complain that in oxide_cli 
# oxide-pkgs is using a git dependency 
# while this package is using a path dependency.
# We could also use a third package to abstract oxide_core but that seems overkill
[patch."https://github.com/OxidePM/oxide"]
oxide_core = { path = "crates/oxide_core" }
