[package]
name = "oxide_store"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
futures-util = "0.3.31"
libc = "0.2.172"
log = "0.4.27"
oxide_core = { path = "../oxide_core" }
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
sqlx = { version = "0.8.5", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
], default-features = false }
tokio = { version = "1.44.2", features = ["fs", "io-util"] }
toml = "0.8.23"

[lints]
workspace = true
